Search: make search text box wider.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@559 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/header.html
+++ b/gobotany/simplekey/templates/simplekey/header.html
@@ -1,6 +1,7 @@
 <div id="head">
   (header/navigation)
   <form id="headsearch" action="/simple/search/">
-    <input type="text" name="q" value="{{ request.GET.q }}"/><button>Search</button>
+    <input type="text" name="q" value="{{ request.GET.q }}" size="40">
+    <button>Search</button>
   </form>
 </div>
