Search: start showing a very basic highlighted excerpt with each result.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@560 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -12,30 +12,34 @@
 
     <div class="search-type">
       <span class="title">Search:</span>
-      <span class="option disabled">Entire site <input type="radio" name="stype" value="all" disabled /></span>
-      <span class="option">Plant pages only <input type="radio" name="stype" value="plants" checked /></span>
+      <span class="option disabled">Entire site <input type="radio" name="stype"
+            value="all" disabled /></span>
+      <span class="option">Plant pages only <input type="radio" name="stype"
+            value="plants" checked /></span>
     </div>
 
-      <ul id="search-results-list">
-      {% for result in page.object_list %}
+    <ul id="search-results-list">
+    {% for result in page.object_list %}
         <li class="plant">
-          <div class="icon">&nbsp;</div>
-          <h4><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/plant/slug-missing/{{ result.scientific_name }}">{{ result.scientific_name }} - Plant Page</a></h4>
-          <p class="excerpt">
+            <div class="icon">&nbsp;</div>
+            <h4><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/plant/slug-missing/{{ result.scientific_name }}">{{ result.scientific_name }} -
+            Plant Page</a></h4>
+            <p class="excerpt">
             {{ result.description }}
-          </p>
-          <p>
-              {{ result.text }}
-          <p>
+            </p>
+            <p>
+            {% highlight result.text with query %}
+            <p>
         </li>
-      {% empty %}
+        {% empty %}
         <li class="no-results">No results found.</li>
-      {% endfor %}
-      </ul>
+    {% endfor %}
+    </ul>
 
-      {% include "simplekey/search_navigation.html" %}
+    {% include "simplekey/search_navigation.html" %}
+
     {% else %}
-      {# Show some example queries to run? #}
+        {# Show some example queries to run? #}
     {% endif %}
 </div>
 
