Add description to search-text template. Make various changes to search results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@561 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/header.html
+++ b/gobotany/simplekey/templates/simplekey/header.html
@@ -1,5 +1,5 @@
 <div id="head">
-  (header/navigation)
+  (header/navigation)<br>
   <form id="headsearch" action="/simple/search/">
     <input type="text" name="q" value="{{ request.GET.q }}" size="40">
     <button>Search</button>
