--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -128,8 +128,10 @@
           </p>
 
           <h3>Classification</h3>
-          <p><strong>Family:</strong> 
-             <a href="/simple/families/{{ taxon.family|lower }}/">{{ taxon.family }}</a></p>
+          <p><strong>Family:</strong>
+              <a href="/simple/families/{{ taxon.family|lower }}/">{{ taxon.family }}</a></p>
+          <p><strong>Genus:</strong>
+              <em><a href="/simple/genera/{{ taxon.genus|lower }}/">{{ taxon.genus }}</a></em></p>
 
       </div>
   </div>
