Search: add Previous and Next links, replacing the First and Last links. Limit number of results pages to 10 for now.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@568 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div id="search-results">
     {% if query %}
-    <h1>Results <strong>x-xx</strong> of
+    <h1>Results <strong>{{ page.number|add:'-1' }}-xx</strong> of
         <strong>{{ paginator.count }}</strong> for
         <strong>{{ query }}</strong>
     </h1>
