--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -8,7 +8,8 @@
 {% block content %}
 <div id="search-results">
     {% if query %}
-    <h1>Results <strong>{{ page.number|add:'-1' }}-xx</strong> of
+    <h1>Results <strong>{% if page.number > 1 %}{{ page.number|add:'-1' }}{% endif %}1&#8211;{{ page.number }}0
+        </strong> of
         <strong>{{ paginator.count }}</strong> for
         <strong>{{ query }}</strong>
     </h1>
