Remove placeholder for search time from the search results page, because apparently can't get to Solr's search time from the Haystack API.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@572 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -476,7 +476,7 @@ ul#glossary li:nth-child(even) {
 }
 
 #search-results h1 {
-    margin: 0.5em 0 0;
+    margin: 0.5em 0;
 }
 
 #search-results .time {
