Add species links to family and genus pages. Add pile group and pile links to species pages, and restore filter state for the pile link so the user can click the link to go back without losing their place.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@576 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -1,5 +1,6 @@
 {% extends "simplekey/base.html" %}
 {% load thumbnail %}
+{% load simplekey_extras %}
 {% block title %}
 {{ item.name }}
 {% endblock %}
@@ -37,7 +38,7 @@
       <h3>Species:</h3>
       <ul class="species">
         {% for species in item.taxa.all %}
-        <li><em>{{ species.scientific_name }}</em></li>
+        <li><a href="/simple/species/{{ species.scientific_name|split:' '|at_index:'0'|lower }}/{{ species.scientific_name|split:' '|at_index:'1'|lower }}/"><em>{{ species.scientific_name }}</em></a></li>
         {% endfor %}
       </ul>
     </div>
