--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -18,22 +18,23 @@
     <ul id="search-results-list">
     {% for result in page.object_list %}
         <li>
-            <h2>
-                <!-- TODO: need custom highlighter that does not excerpt the document title -->
-                {% if result.scientific_name %}
-                    <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/simple/species/{{ result.scientific_name|split:' '|at_index:'0'|lower }}/{{ result.scientific_name|split:' '|at_index:'1'|lower }}/"><em>{% highlight result.scientific_name with query %}</em></a>
+            <!-- TODO: need custom highlighter that does not excerpt the document title -->
+            {% if result.scientific_name %}
+                <img src="/static/graphics/species-icon.jpg" alt="">
+                <h2><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/simple/species/{{ result.scientific_name|split:' '|at_index:'0'|lower }}/{{ result.scientific_name|split:' '|at_index:'1'|lower }}/"><em>{% highlight result.scientific_name with query %}</em></a></h2>
+            {% else %}
+                {% if result.model_name == 'family' %}
+                    <img src="/static/graphics/family-icon.jpg" alt="">
+                    <h2><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/simple/families/{{ result.name|lower }}/">Family {% highlight result.name with query %}</a></h2>
                 {% else %}
-                    {% if result.model_name == 'family' %}
-                        <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/simple/families/{{ result.name|lower }}/">Family {% highlight result.name with query %}</a>
+                    {% if result.model_name == 'genus' %}
+                        <img src="/static/graphics/genus-icon.jpg" alt="">
+                        <h2><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/simple/genera/{{ result.name|lower }}/">Genus <em>{% highlight result.name with query %}</em></a></h2>
                     {% else %}
-                        {% if result.model_name == 'genus' %}
-                            <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/simple/genera/{{ result.name|lower }}/">Genus <em>{% highlight result.name with query %}</em></a>
-                        {% else %}
-                            (unknown model name)
-                        {% endif %}
+                        (unknown model name)
                     {% endif %}
                 {% endif %}
-            </h2>
+            {% endif %}
             <p>
             {% highlight result.text with query %}
             <p>
