Fix pile and pile group links to use slugs.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@578 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -10,9 +10,9 @@
 {% endblock %}
 
 {% block content %}
-  <p><a href="/simple/{{ pilegroup.name|lower }}/">{{ pilegroup.name }}</a>: 
+  <p><a href="/simple/{{ pilegroup.slug }}/">{{ pilegroup.name }}</a>: 
      <a id="results-link"
-        href="/simple/{{ pilegroup.name|lower }}/{{ pile.name|lower }}/">{{ pile.name }}</a>
+        href="/simple/{{ pilegroup.slug }}/{{ pile.slug }}/">{{ pile.name }}</a>
   </p>
   <h1><em>{{ scientific_name }}</em>
       <span class="auth">{{ taxon.taxonomic_authority }}</span></h1>
