Modify models to allow for storing help and glossary pages info. Add basic records for some of the help pages. Add a search index for help pages. Show help pages in search results with an icon next to them.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@580 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -31,7 +31,12 @@
                         <img src="/static/graphics/genus-icon.jpg" alt="">
                         <h2><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/simple/genera/{{ result.name|lower }}/">Genus <em>{% highlight result.name with query %}</em></a></h2>
                     {% else %}
-                        (unknown model name)
+                        {% if result.model_name == 'helppage' %}
+                            <img src="/static/graphics/help-icon.jpg" alt="">
+                            <h2><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}{{ result.object.url_path }}">{% highlight result.title with query %}</a></h2>
+                        {% else %}
+                            (unknown model name)
+                        {% endif %}
                     {% endif %}
                 {% endif %}
             {% endif %}
