Add base for glossary pages to the search engine (still need to add terms). Remove numeric terms page from the glossary because the two terms there make no sense and just appear to be data errors.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@581 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -35,7 +35,12 @@
                             <img src="/static/graphics/help-icon.jpg" alt="">
                             <h2><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}{{ result.object.url_path }}">{% highlight result.title with query %}</a></h2>
                         {% else %}
-                            (unknown model name)
+                            {% if result.model_name == 'glossaryhelppage' %}
+                                <img src="/static/graphics/glossary-icon.jpg" alt="">
+                                <h2><a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}{{ result.object.url_path }}">{% highlight result.title with query %}</a></h2>
+                            {% else %}
+                                (unknown model name)
+                            {% endif %}
                         {% endif %}
                     {% endif %}
                 {% endif %}
