Add glossary terms to search engine index and text template. Adjust glossary template and CSS to increase similarity between the page and the search engine excerpt.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@582 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -23,8 +23,8 @@ Glossary: {{ this_letter|upper }}
 <ul id="glossary">
   {% for term in glossary %}
     <li>
-      <b>{{ term.term|title }}.</b>
-      <span class="definition">{{ term.lay_definition }}</span>
+      <h2>{{ term.term }}</h2>
+      <span class="definition">{{ term.lay_definition|capfirst }}.</span>
       {% if term.image %}
         <img src="{{ term.image.url }}" alt="{{ term.term }}">
       {% endif %}
