Distribution map support, fills in an SVG of new england counties; shades in states at the moment, waiting for county level data.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@586 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -82,7 +82,7 @@
           <p><strong>CT:</strong> {{ states_status.CT }}</p>
           <p><strong>RI:</strong> {{ states_status.RI }}</p>
           </div>
-          
+
           <h3>Wetland Status</h3>
           <p>
               {{ wetland_status }}
@@ -106,7 +106,7 @@
                   title="distribution map for {{ scientific_name }}">
           <![endif]-->
           <!--[if !IE]>-->
-          <object data="/static/graphics/new-england-counties.svg"
+          <object data="/maps/{{taxon.genus|lower}}-{{specific_epithet}}-distribution-map/"
                   type="image/svg+xml" id="dist-county-map"
                   title="distribution map for {{ scientific_name }}">
           <!--<![endif]-->
