Fix bug where top number in results count range was incorrect on the last search results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@587 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -9,8 +9,10 @@
 {% block content %}
 <div id="search-results">
     {% if query %}
-    <h1>Results <strong>{% if page.number > 1 %}{{ page.number|add:'-1' }}{% endif %}1&#8211;{{ page.number }}0
-        </strong> of
+    <h1>Results
+        <strong>{% if page.number > 1 %}{{ page.number|add:'-1' }}{% endif %}1&#8211;{% if page.end_index|divisibleby:'10' %}{{ page.number }}0
+        {% else %}{{ page.end_index }}{% endif %}</strong>
+        of
         <strong>{{ paginator.count }}</strong> for
         <strong>{{ query }}</strong>
     </h1>
