Add basic family API URL and handler. Add a temporary image to the family page, and partial image pager support.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@591 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -761,11 +761,11 @@ input.filter_int2 {
     max-width: 350px;
 }
 
-#species #images .nav {
+#species #images .nav, #family #images .nav {
     text-align: center;
 }
 
-#species #images .nav a {
+#species #images .nav a, #family #images .nav a {
     padding: 0 1em;
 }
 
