--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -15,17 +15,19 @@
 
     <div id="images">
       <h3>Images</h3>
-      <ul>
-        {% for i in item_images %}
-        <li class="ItemImage">
-         <img src="{% thumbnail i.image 320x540  %}" alt="{{ i.alt }}" />
-         <h4>{{ i.alt }}</h4>
-        </li>
-        {% endfor %} 
-      </ul>
-      <div class="Navigation">
-        <a class="prev" href="#">Prev</a> | <a class="next" href="#">Next</a>
-      </div>
+      <p>
+          {% if item_images %}
+              {% for i in item_images %}
+                  {% if forloop.first %}
+                      <img src="{{ i.image.url }}">
+                  {% endif %}
+              {% endfor %}
+          {% else %}
+              <p>(missing)</p>
+          {% endif %}
+      </p>
+      <p class="nav"><a href="#">&lt; prev</a> <span>? of ?</span>
+          <a href="#">next &gt;</a></p>
     </div>
 
     <div id="info">
@@ -72,7 +74,7 @@
   <script>
       dojo.require('gobotany.sk.family');
       dojo.addOnLoad(function() {
-          gobotany.sk.family.init();
+          gobotany.sk.family.init('{{ item.slug }}');
       });
   </script>
 {% endblock %}
