--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -803,8 +803,17 @@ input.filter_int2 {
     text-align: center;
 }
 
-#drawings li img {
-    margin: 20px 0;
+#drawings img {
+    background: #eee;
+    border: 1px solid #000;
+    display: block;
+    height: 150px;
+    margin: 28px 0 0 0;
+    padding: 5px;
+    width: 150px;
+}
+#drawings p {
+    text-align: center;
 }
 
 #dist-county-map {
